# SpotyDownloader

SpotyBot/: .env.default  .env.example  .gitignore  INSTALLATION_STATUS.md  LICENSE  README.md  example.py  install.bat  pyproject.toml  requirements.txt  run_spotybot.py  spotybot_gui.py  start_gui.bat
SpotyBot/spotybot/: __init__.py  bot.py  cli.py  config.py  downloader.py  spotify_client.py
